k8s/base/cap-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cap-user-service
spec:
  type: ClusterIP
  selector:
    app: cap-user-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
