k8s/base/data-ingestion-service-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-ingestion-service-udp
spec:
  type: NodePort
  selector:
    app: data-ingestion-service
  ports:
    - name: udp
      protocol: UDP
      port: 3000
      targetPort: 3000
      nodePort: 32000  # Choose a port in the NodePort range (30000-32767)
