k8s/base/data-ingestion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-ingestion-service
spec:
  type: ClusterIP
  selector:
    app: data-ingestion-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: udp
      protocol: UDP
      port: 3000
      targetPort: 3000
