k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstone-ingress
  annotations:
    spec.ingressClassName: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /api/ingestion/
            pathType: Prefix
            backend:
              service:
                name: data-ingestion-service
                port:
                  number: 8080
          - path: /api/processing/
            pathType: Prefix
            backend:
              service:
                name: data-processing-service
                port:
                  number: 8080
          - path: /api/acquisition/
            pathType: Prefix
            backend:
              service:
                name: data-acquisition-service
                port:
                  number: 8080
